# doc-engine

./: .gitignore  README.md  benchmark-comparison.md  config.py  detector.py  main.py  pipeline.py  requirements.txt  sorter.py
deployable version/: .env.example  Dockerfile.api  Dockerfile.worker  docker-compose.yml  logging_config.py  requirements.api.txt  requirements.txt  schemas.py  settings.py
deployable version/api/: main.py  routes.py
deployable version/core/: config.py  detector.py  pipeline.py  sorter.py
deployable version/core/parsers/: __init__.py  (+3 more)
deployable version/storage/: manager.py
deployable version/worker/: celery_app.py  tasks.py
engine-py/: CLAUDE.md  PIPELINE_OVERVIEW.md  api.py  config.py  detector.py  main.py  pipeline.py  requirements.txt  run_evidence.py  sorter.py
engine-py/parsers/: __init__.py  common.py  docling_parser.py  office.py  office_parser.py  vlm_parser.py
engine-rs/: Cargo.toml
engine-rs/scripts/: extract_pdf_pages.py  parse_docling.py  parse_office.py  render_pdf.py
engine-rs/src/: config.rs  detector.rs  main.rs  pdf_render.rs  pipeline.rs  sorter.rs
engine-rs/src/parsers/: docling.rs  mod.rs  office.rs  vlm.rs
parsers/: docling_parser.py  office.py
py-rs-version/: Cargo.toml  Live 2025 - Lean Tech Internal Audit Schedule V7 (2)_1.md  SecurityCompliance__KPIs__KRIs_ (1)_1.md  Vulnerability_Management_Process (2)_1.md
py-rs-version/parsers/: common.py  docling_parser.py  office_parser.py  vlm_parser.py
py-rs-version/src/: config.rs  detector.rs  extractor.rs  main.rs  pipeline.rs  sorter.rs  summary.rs
(+25 files in other folders)
