[package]
name = "engine-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "engine-rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
lopdf = "0.33"
base64 = "0.22"
anyhow = "1"
walkdir = "2"
pdfium-render = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
